<resources>
    <string name="app_name">Kisan Yojana</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="tab_text_1">Yojana</string>
    <string name="tab_text_2">News</string>
    <string name="tab_text_3">Others</string>
    <string name="home">Home</string>
    <string name="rate_app">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="version_1_1">version</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="share_app">Share App</string>
    <string name="eng">Eng</string>
    <string name="hin">Hin</string>
    <string name="camera_tip">Tap to Take a Photo,Hold to Record Video</string>


    <!--Test ads ids-->
    <!--        <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--        <string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--        <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--        <string name="native_ads">ca-app-pub-3940256099942544/2247696110</string>-->


    <!--Real ads ids-->

    <string name="app_id">ca-app-pub-1247850544347178~2799712755</string>

<!--    <string name="banner_id">ca-app-pub-1247850544347178/8965665855</string>-->
<!--    <string name="interstitial_id">ca-app-pub-1247850544347178/8926137402</string>-->
<!--    <string name="native_ads">ca-app-pub-1247850544347178/5185756803</string>-->

<!--        <string name="banner_id">/22569351198/chakdo_com.pmkisanyojana_banner</string>-->
<!--        <string name="interstitial_id">/22569351198/chakdo_com.pmkisanyojana_interstitial</string>-->
<!--        <string name="native_ads">/22569351198/chakdo_com.pmkisanyojana_native</string>-->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="_0">0</string>
    <string name="add_your_yojana">Add Your Yojana</string>
    <string name="user_name">your name</string>
    <string name="yojana_name">Yojana name</string>
    <string name="yojana_amount">Yojana Amount</string>
    <string name="kisan_yojana">किसान योजना</string>

    <!--        /22569351198/chakdo_com.pmkisanyojana_banner-->

<!--        /22569351198/chakdo_com.pmkisanyojana_interstitial-->

<!--        /22569351198/chakdo_com.pmkisanyojana_native-->

</resources>