<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewsDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:minHeight="?actionBarSize"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:tint="@color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedButton="@id/hindiPreview"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
            app:singleSelection="true">

            <Button
                android:id="@+id/hindiPreview"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:text="@string/hin" />

            <Button
                android:id="@+id/englishPreview"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:text="@string/eng"

                />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">


            <ImageView
                android:id="@+id/newsImg"
                android:layout_width="match_parent"
                android:layout_height="220sp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:padding="2dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newsImg" />


            <TextView
                android:id="@+id/newsDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newsTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>