<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="56sp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?actionBarSize"
                android:ellipsize="marquee"
                android:maxLength="17"
                android:minLines="1"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialButtonToggleGroup"
                app:layout_constraintStart_toEndOf="@+id/back_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:minHeight="?actionBarSize"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title"
                app:tint="@color/black" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/materialButtonToggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:checkedButton="@id/hindiPreview"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
                app:singleSelection="true">

                <Button
                    android:id="@+id/hindiPreview"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:text="@string/hin" />

                <Button
                    android:id="@+id/englishPreview"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:text="@string/eng"

                    />

            </com.google.android.material.button.MaterialButtonToggleGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/visit_site_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </ScrollView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_home"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_internet.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/tv_not_connected"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="bottom"
            android:background="@color/black"
            android:gravity="center"
            android:text="No connection"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/visit_site_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:clickable="true"
            android:focusable="true"
            android:padding="10sp"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animationEmpty"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/empty"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />


</androidx.constraintlayout.widget.ConstraintLayout>